refactor: remove sensor to values 1-m relation